--- a/dj_pro/dj_pro/templates/normal/base.html
+++ b/dj_pro/dj_pro/templates/normal/base.html
@@ -26,9 +26,12 @@
         <link rel="shortcut icon" href="img/favicon.png">   
         <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
-        <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-resource.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-cookies.js"></script>
+        <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
     </head>    
-    <body>
+    <body ng-app="myApp">
         <div class="container-fluid">
             
             {% block content %}{% endblock %}
