--- a/dj_pro/dj_pro/templates/normal/navigationtest.html
+++ b/dj_pro/dj_pro/templates/normal/navigationtest.html
@@ -6,37 +6,29 @@
         <div class="col-md-12 column">
             <nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
                 <div class="navbar-header">
-                    {% for naval in nav1 %}
-                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#"> {{ naval }} </a>
-                     {% endfor %}
+                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#"> test </a>
                 </div>
                 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        {% for naval in nav2 %}
                         <li class="active">
-                            <a href="#"> {{ naval }} </a>
+                            <a href="#"> test </a>
                         </li>
-                        {% endfor %}
                         
                     </ul>
                     
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
-                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ nav3val }}<strong class="caret"></strong></a>
+                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">test<strong class="caret"></strong></a>
                             <ul class="dropdown-menu">
-                                {% for naval in nav4 %}
                                 <li>
-                                    <a href="#"> {{ naval }} </a>
+                                    <a href="#"> test </a>
                                 </li>
-                                {% endfor %}
                                 <li class="divider">
                                 </li>
-                                {% for naval in nav5 %}
                                 <li>
-                                    <a href="#"> {{ naval }} </a>
+                                    <a href="#"> test </a>
                                 </li>
-                                {% endfor %}
                             </ul>
                         </li>
                     </ul>
@@ -48,7 +40,28 @@
                     </form>
                 </div>
                 
-            </nav>
+                </nav>
+
+                <div ng-controller="game_script_ctrl">
+                    <ul>
+                        <li ng-repeat="i in game_scripts">(( i ))</li>
+                    </ul>
+                </div>
+
+                <div ng-controller="user_ctrl">
+                    <ul>
+                        <li ng-repeat="i in users">(( i ))</li>
+                    </ul>
+                    <form action="users" method="post" ng-submit="myuser()">
+                        <label>New User:</label>
+                        <input type="text" name="username" id="" value="" ng-model="newuser.username"/>
+                        <br /><label>password:</label>
+                        <input type="password" name="password" id="" value="" ng-model="newuser.password"/>
+                        <br /><button type="submit" class="btn btn-default">Create</button>
+                        
+                    </form>
+                </div>
+
         </div>
     </div>
         
