--- a/dj_pro/dj_pro/templates/normal/navigationtest.html
+++ b/dj_pro/dj_pro/templates/normal/navigationtest.html
@@ -52,11 +52,12 @@
                     <ul>
                         <li ng-repeat="i in users">(( i ))</li>
                     </ul>
-                    <form action="users" method="post" ng-submit="myuser()">
+                    <form ng-submit="newPost()">
+                        {% csrf_token %}
                         <label>New User:</label>
-                        <input type="text" name="username" id="" value="" ng-model="newuser.username"/>
+                        <input type="text" ng-model="postData.username"/>
                         <br /><label>password:</label>
-                        <input type="password" name="password" id="" value="" ng-model="newuser.password"/>
+                        <input type="password" ng-model="postData.password"/>
                         <br /><button type="submit" class="btn btn-default">Create</button>
                         
                     </form>
