--- a/dj_pro/dj_pro/templates/normal/base.html
+++ b/dj_pro/dj_pro/templates/normal/base.html
@@ -23,12 +23,14 @@
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114-precomposed.png">  
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72-precomposed.png">  
         <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">  
-        <link rel="shortcut icon" href="img/favicon.png">   
         <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
-        <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+        <link rel="stylesheet" href="{% static 'css/img/glyphicons-halflings.png' %}">
+        <link rel="stylesheet" href="{% static 'css/img/glyphicons-halflings-white.png' %}">
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-resource.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-cookies.js"></script>
+        <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.2.js"></script>
         <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
     </head>    
     <body ng-app="myApp">
