--- a/dj_pro/dj_pro/templates/normal/navigationtest.html
+++ b/dj_pro/dj_pro/templates/normal/navigationtest.html
@@ -85,5 +85,5 @@
   Playing audio: <b>(( player.playing )) <br />song:(( player.name ))<br />current time:((player.progress|MinSecFilter))</b>
   <br />djust time:<input type='number' ng-change="player.modifyTime(player.mytime)" ng-model="player.mytime"/>
     <h5>mytime</h5>
-    <h5>today : (( clock |date:'yyyy-MM-dd HH:mm:ss (EEE)'))</h5>
+    <h5 ng-controller="TimeController">today : (( clock |date:'yyyy-MM-dd HH:mm:ss (EEE)'))</h5>
 </div>
