--- a/dj_pro/dj_pro/templates/normal/navigationtest.html
+++ b/dj_pro/dj_pro/templates/normal/navigationtest.html
@@ -80,9 +80,19 @@
         </div>
     </div>
         <div ng-controller="PlayerController">
-  <button ng-click="player.play()" class="btn btn btn-default" ng-show="!player.playing">Play</button>
-  <button ng-click="player.stop()" class="btn btn btn-info" ng-show="player.playing">Stop</button>
-  Playing audio: <b>(( player.playing )) <br />song:(( player.name ))<br />current time:((player.progress|MinSecFilter))</b>
-  <br />djust time:<input type='number' ng-change="player.modifyTime(player.mytime)" ng-model="player.mytime"/>
+            <audio media-player="audio1" data-playlist="playlist1">
+            </audio>
+            <span ng-show="audio1.playing">Player status: Playing</span>
+            <span ng-show="!audio1.playing">Player status: Paused</span>
+            <br />
+  <button ng-click="audio1.play()" class="btn btn btn-default" ng-show="!audio1.playing">Play</button>
+  <button ng-click="audio1.pause()" class="btn btn btn-info" ng-show="audio1.playing">Stop</button>
+  <button ng-click="audio1.next()" class="btn btn btn-info">Next</button>
+  <button ng-click="audio1.prev()" class="btn btn btn-info">Prev</button>
+
+  Playing audio: <b>(( audio1.playing )) <br />song:((playlist1[2].src.split("/")[3]))<br />current time:((audio1.currentTime|MinSecFilter))</b>
+  <br />djust time:<input type='number' ng-change="audio1.seek(value)" ng-model="value"/>
+  <br />djust volume:<input type='number' ng-change="audio1.setVolume(volume/100)" ng-model="volume"/>
+  
     <h5 ng-controller="TimeController">today : (( clock |date:'yyyy-MM-dd HH:mm:ss (EEE)'))</h5>
 </div>
