--- a/dj_pro/dj_pro/templates/normal/navigationtest.html
+++ b/dj_pro/dj_pro/templates/normal/navigationtest.html
@@ -99,7 +99,7 @@
   <button ng-click="audio1.next()" class="btn btn btn-info">Next</button>
 
   Playing audio: <b>(( audio1.playing )) <br />
-   image: <img src=((playlist1[audio1.currentTrack-1].img)) width="50" height="50">  song:((playlist1[audio1.currentTrack-1].src.split("/")[3]))<br />current time:((audio1.currentTime|MinSecFilter))</b>
+   image: <img src="((playlist1[audio1.currentTrack-1].img))" width="50" height="50">  song:((playlist1[audio1.currentTrack-1].src.split("/")[3]))<br />current time:((audio1.currentTime|MinSecFilter))</b>
   <br />djust time:<input type='number' ng-change="audio1.seek(value)" ng-model="value"/>
   <br />load percent:((audio1.loadPercent))%
   <br />djust volume:<input type='number' ng-change="audio1.setVolume(volume/100)" ng-model="volume"/>
