--- a/dj_pro/dj_pro/templates/normal/navigationtest.html
+++ b/dj_pro/dj_pro/templates/normal/navigationtest.html
@@ -115,11 +115,11 @@
     </div>
     <div class="row">
     <div class="col-sm-1 column">
-    <span>adjust time:</span>
+    <span>time(s):</span>
         <input type='number' min='1' class="form-control" ng-change="audio1.seek(value)" ng-model="value"/>
     </div>
     <div class="col-sm-1 column">
-    <span>adjust vol:</span>
+    <span>volume:</span>
         <input type='number' min='1' max='100' class="form-control" ng-change="audio1.setVolume(volume/100)" ng-model="volume"/>
     </div>
     </div>
