--- a/dj_pro/dj_pro/templates/normal/navigation.html
+++ b/dj_pro/dj_pro/templates/normal/navigation.html
@@ -1,46 +1,38 @@
-<div class="row clearfix">
-    <div class="col-md-12 column">
-        <br />
-        <hr />
+<div class="col-md-12 column">
+    <nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#"> test </a>
     </div>
-        <div class="col-md-12 column">
-            <nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
-                <div class="navbar-header">
-                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#"> {{ navargv1 }} </a>
-                </div>
-                
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li class="active">
-                            <a href="#"> {{ navargv2 }} </a>
-                        </li>
-                        
-                    </ul>
-                    
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="dropdown">
-                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ navargv4 }}<strong class="caret"></strong></a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="#"> {{ navargv5 }} </a>
-                                </li>
-                                <li class="divider">
-                                </li>
-                                <li>
-                                    <a href="#"> {{ navargv6 }} </a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="navbar-form navbar-right" role="search" method="get" action='/filebook/mine/'>
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <input type="text" class="form-control" name='q' placeholder="Search"/>
-                        </div> <button type="submit" class="btn btn-default">Submit</button>
-                    </form>
-                </div>
-                
-            </nav>
-        </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+            <li class="active">
+                <a href="#"> test </a>
+            </li>
+        </ul>
+
+        <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">test<strong class="caret"></strong></a>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a href="#"> test </a>
+                    </li>
+                    <li class="divider">
+                    </li>
+                    <li>
+                        <a href="#"> test </a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+        <form class="navbar-form navbar-right" role="search" method="get" action='/filebook/mine/'>
+            {% csrf_token %}
+            <div class="form-group">
+                <input type="text" class="form-control" name='q' placeholder="Search"/>
+            </div> 
+            <button type="submit" class="btn btn btn-primary"><i class="icon-search">search</i></button>
+        </form>
     </div>
-        
+    </nav>
+</div>
