--- a/dj_pro/dj_pro/templates/setgame.html
+++ b/dj_pro/dj_pro/templates/setgame.html
@@ -1,4 +1,8 @@
 {% extends "normal/base.html" %}
 {% block content %}
-{% include "normal/navigationtest.html" %}
+{% include "normal/navigation.html" %}
+{% include "normal/choose_script.html" %}
+{% include "normal/music_player.html" %}
+{% include "normal/music_upload.html" %}
+{% include "normal/time.html" %}
 {% endblock %}
