--- a/dj_pro/dj_pro/templates/setgame.html
+++ b/dj_pro/dj_pro/templates/setgame.html
@@ -5,4 +5,6 @@
 {% include "normal/music_player.html" %}
 {% include "normal/music_upload.html" %}
 {% include "normal/time.html" %}
+{% include "normal/game_login.html" %}
+{% include "normal/test.html" %}
 {% endblock %}
