--- a/dj_pro/dj_pro/templates/normal/base.html
+++ b/dj_pro/dj_pro/templates/normal/base.html
@@ -28,6 +28,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-resource.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-cookies.js"></script>
+        <script src="{% static 'js/libs/angular/angular-md5.js' %}"></script>
         <script src="//mrgamer.github.io/angular-media-player/dist/angular-media-player.js" type="text/javascript"></script>
         <script src="//mrgamer.github.io/angular-media-player/dist/angular-media-player.min.js" type="text/javascript"></script>
         <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.2.js"></script>
@@ -46,6 +47,7 @@
         <script type="text/javascript" src="{% static 'js/angular-controller/music_ctrl.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/angular-controller/TimeController.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/angular-controller/PlayerController.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/angular-controller/game_login.js' %}"></script>
     </head>    
     <body ng-app="myApp">
         <div class="container-fluid">
