--- a/dj_pro/dj_pro/templates/normal/base.html
+++ b/dj_pro/dj_pro/templates/normal/base.html
@@ -23,15 +23,16 @@
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114-precomposed.png">  
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72-precomposed.png">  
         <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">  
+        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+
         <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
-        <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-resource.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-cookies.js"></script>
-        <script src="{% static 'js/libs/angular/angular-md5.js' %}"></script>
-        <script src="//mrgamer.github.io/angular-media-player/dist/angular-media-player.js" type="text/javascript"></script>
-        <script src="//mrgamer.github.io/angular-media-player/dist/angular-media-player.min.js" type="text/javascript"></script>
-        <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.2.js"></script>
+        <script type="text/javascript" src="{% static 'js/libs/angular/angular.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/libs/angular/angular-resource.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/libs/angular/angular-cookies.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/libs/angular/angular-md5.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/libs/angular/media-player.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/libs/angular/media-player.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/libs/bootstrap/ui-bootstrap-tpls-0.11.2.js' %}"></script>
 
         <script type="text/javascript" src="{% static 'js/angular-controller/main.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/angular-factory/MinSecFilter.js' %}"></script>
