--- a/dj_pro/dj_pro/templates/normal/game_login.html
+++ b/dj_pro/dj_pro/templates/normal/game_login.html
@@ -1,4 +1,5 @@
 <div class="col-md-12 column" ng-controller="game_login">
+    <div class="col-md-4">
         <label>loginname:</label>
         <input type="text" name="loginname" class="form-control" id="" value="" ng-model="accname" />
         <label>domain:</label>
@@ -9,6 +10,8 @@
         <input type="text" name="key" class="form-control" id="" value="uqee20110301" placeholder="uqee20110301" ng-model="key"/>
         <br />
         <a href="((login_url))" target="_blank"><button class="btn btn btn-primary">lyingdragon login!</button></a>
+    </div>
+    <div class="row col-md-10">
     <ul>
         <li>domain:  ((domain))</li>
         <li>accid:  ((accid))</li>
@@ -18,4 +21,5 @@
         <li>ticket:  ((ticket))</li>
         <li>login_url:  ((login_url))</li>
     </ul>
+    </div>
 </div>
