--- a/dj_pro/dj_pro/templates/normal/music_player.html
+++ b/dj_pro/dj_pro/templates/normal/music_player.html
@@ -37,6 +37,8 @@
         <button ng-click="mynext()" class="btn btn btn-info">Next</button>
         <button ng-click="repeat_func()" class="btn btn btn-default" ng-show="!repeat">Repeat Once</button>
         <button ng-click="repeat_func()" class="btn btn btn-info" ng-show="repeat">Cancel Repeat </button>
+        <button ng-click="goloop()" class="btn btn btn-default" ng-show="!loop">go loop </button>
+        <button ng-click="goloop()" class="btn btn btn-info" ng-show="loop">Cancel loop </button>
         <br />
     </div>
     <div class="row">
@@ -53,10 +55,10 @@
     </div>
     <br/>
     <div class="col-md-6 column">
-        <button class="btn btn-primary" ng-click="isCollapsed = !isCollapsed">music list - ((sum_num))</button>
+        <button class="btn btn-primary" ng-click="isCollapsed = !isCollapsed">music list - ((person_num))</button>
         <div collapse="isCollapsed">
             <div class="col-md-5 column">
-                <div class="col-md-12 column" ng-repeat="music in musiclist">
+                <div class="col-md-12 column" ng-repeat="music in playlist">
                     <span>image: </span> <img ng-src="((music.img))" class="img-thumbnail" width="70" height="70">
                     <button ng-click="audio.play(music.id-1+1)" class="btn btn btn-default"><span>song:((music.src.split("/")[3]))</span></button>
                 </div>
