add google and stackoverflow api for search

--- a/dj_pro/dj_pro/templates/normal/base.html
+++ b/dj_pro/dj_pro/templates/normal/base.html
@@ -42,6 +42,7 @@
         <script type="text/javascript" src="{% static 'js/angular-factory/Game_Script.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/angular-factory/Excuted_Command.js' %}"></script>
 
+        <script type="text/javascript" src="{% static 'js/angular-controller/google_ctrl.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/angular-controller/game_script_ctrl.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/angular-controller/excuted_command_ctrl.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/angular-controller/user_ctrl.js' %}"></script>
