--- a/dj_pro/dj_pro/templates/normal/choose_script.html
+++ b/dj_pro/dj_pro/templates/normal/choose_script.html
@@ -1,3 +1,6 @@
+<div class="col-md-12 column">
+    <h3>activity settings:</h3>
+</div>    
 <div ng-controller="game_script_ctrl">
     <div ng-repeat="a in gamename_uniq" class="col-md-6 column">
         <button class="btn btn-primary" ng-click="isCollapsed1 = !isCollapsed1">((a))</button>
@@ -11,11 +14,11 @@
                                 <label ng-repeat="i in game_scripts|filter:{gamename:((a)),access_ip:((b))}"><input type="checkbox" value="(( i.gamename )), (( i.gamescript )),(( i.access_ip ))" name="get_list"> (( i.gamescript ))<br /></label>
                             </div>
                             <button type="submit" class="btn btn btn-info">Submit</button>
-                            <div>
-                                <p>result:((result))</p>
-                            </div>
-                    </form>
+                        </form>
                     </div>
+                </div>
+                <div class="col-md-12 column">
+                    <p>result:((result))</p>
                 </div>
             </div>
         </div>
