--- a/dj_pro/dj_pro/templates/normal/music_player.html
+++ b/dj_pro/dj_pro/templates/normal/music_player.html
@@ -1,3 +1,6 @@
+<div class="col-md-12 column">
+    <h3>BGM:</h3>
+</div>    
 <div ng-controller="PlayerController" class="col-md-12 column">
     <audio media-player="audio" data-playlist="playlist"></audio>
 
