--- a/dj_pro/dj_pro/templates/normal/navigation.html
+++ b/dj_pro/dj_pro/templates/normal/navigation.html
@@ -26,13 +26,14 @@
                 </ul>
             </li>
         </ul>
-        <form class="navbar-form navbar-right" role="search" method="get" action='/filebook/mine/'>
+        <div class="navbar-form navbar-right" ng-controller="google_ctrl" >
             {% csrf_token %}
             <div class="form-group">
-                <input type="text" class="form-control" name='q' placeholder="Search"/>
+                <input type="text" class="form-control" name='q' placeholder="search" ng-model="search"/>
             </div> 
-            <button type="submit" class="btn btn btn-primary"><i class="icon-search">search</i></button>
-        </form>
+            <a href="((googleurl))" target="_blank"><button type="submit" class="btn btn btn-primary"><i class="icon-search">google!</i></button></a>
+            <a href="((stackoverflowurl))" target="_blank"><button type="submit" class="btn btn btn-primary"><i class="icon-search">stackover!</i></button></a>
+        </div>
     </div>
     </nav>
 </div>
