--- a/dj_pro/dj_pro/templates/normal/navigation.html
+++ b/dj_pro/dj_pro/templates/normal/navigation.html
@@ -33,6 +33,7 @@
             </div> 
             <a href="((googleurl))" target="_blank"><button type="submit" class="btn btn btn-primary"><i class="icon-search">google!</i></button></a>
             <a href="((stackoverflowurl))" target="_blank"><button type="submit" class="btn btn btn-primary"><i class="icon-search">stackover!</i></button></a>
+            <a href="((searchcodeurl))" target="_blank"><button type="submit" class="btn btn btn-primary"><i class="icon-search">searchcode!</i></button></a>
         </div>
     </div>
     </nav>
