--- a/dj_pro/dj_pro/templates/normal/base.html
+++ b/dj_pro/dj_pro/templates/normal/base.html
@@ -23,9 +23,9 @@
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114-precomposed.png">  
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72-precomposed.png">  
         <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57-precomposed.png">  
-        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
         <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="{% static 'js/libs/angular/angular.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/libs/angular/angular-resource.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/libs/angular/angular-cookies.js' %}"></script>
