--- a/dj_pro/dj_pro/templates/normal/choose_script.html
+++ b/dj_pro/dj_pro/templates/normal/choose_script.html
@@ -13,7 +13,7 @@
                             <div class="checkbox">
                                 <label ng-repeat="i in game_scripts|filter:{gamename:((a)),access_ip:((b))}"><input type="checkbox" value="(( i.gamename )), (( i.gamescript )),(( i.access_ip ))" name="get_list"> (( i.gamescript ))<br /></label>
                             </div>
-                            <button type="submit" class="btn btn btn-info">Submit</button>
+                            <button type="submit" class="btn btn btn-info ((button_status))">Submit</button>
                         </form>
                     </div>
                 </div>
