--- a/dj_pro/dj_pro/templates/normal/navigation.html
+++ b/dj_pro/dj_pro/templates/normal/navigation.html
@@ -11,12 +11,12 @@
             </li>
         </ul>
 
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right" ng-controller='CookieCtrl'>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">test<strong class="caret"></strong></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-click="log_action()">((loginname))<strong class="caret"></strong></a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a href="#"> test </a>
+                        <a href="#"> ((log_value)) </a>
                     </li>
                     <li class="divider">
                     </li>
@@ -26,15 +26,22 @@
                 </ul>
             </li>
         </ul>
-        <div class="navbar-form navbar-right" ng-controller="google_ctrl" >
-            {% csrf_token %}
-            <div class="form-group">
+        <div class="nav navbar-form navbar-right" ng-controller="google_ctrl" >
+            <div class="form-group form-inline">
                 <input type="text" class="form-control" name='q' placeholder="search" ng-model="search"/>
-            </div> 
-            <a href="((googleurl))" target="_blank"><button type="submit" class="btn btn btn-primary"><i class="icon-search">google!</i></button></a>
-            <a href="((stackoverflowurl))" target="_blank"><button type="submit" class="btn btn btn-primary"><i class="icon-search">stackover!</i></button></a>
-            <a href="((searchcodeurl))" target="_blank"><button type="submit" class="btn btn btn-primary"><i class="icon-search">searchcode!</i></button></a>
+            </div>
+            <div class="btn-group inline-block">
+                <a href="((googleurl))" target="_blank"><button class="col-sm-8 btn btn-primary"><span>google!</span></button></a>
+                <button type="button" class="col-sm-2 btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu btn-block">
+                    <li><a href="((stackoverflowurl))" target="_blank"><button class="btn btn-primary btn-block">stackover!</button></a></li>
+                    <li><a href="((searchcodeurl))" target="_blank"><button class="btn btn-primary btn-block">searchcode!</button></a></li>
+                </ul>
+            </div>
         </div>
     </div>
     </nav>
 </div>
+
