--- a/dj_pro/dj_pro/templates/normal/user_login.html
+++ b/dj_pro/dj_pro/templates/normal/user_login.html
@@ -8,4 +8,20 @@
         <br /><button type="submit" class="btn btn btn-primary">Create</button>
     </form>
 </div>
+<div ng-controller="user_ctrl">
+<form class="form-signin" role="form" ng-submit="UserPost()">
+    {% csrf_token %}
+    <h2 class="form-signin-heading">Please sign in</h2>
+    <input type="email" class="form-control" placeholder="Email address" required autofocus>
+    <input type="password" class="form-control" placeholder="Password" required>
+    <div class="checkbox">
+        <label>
+            <input type="checkbox" value="remember-me"> Remember me
+        </label>
+    </div>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+</form>
 
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+</div>
