--- a/dj_pro/dj_pro/templates/normal/base.html
+++ b/dj_pro/dj_pro/templates/normal/base.html
@@ -43,6 +43,7 @@
         <script type="text/javascript" src="{% static 'js/angular-factory/Excuted_Command.js' %}"></script>
 
         <script type="text/javascript" src="{% static 'js/angular-controller/google_ctrl.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/angular-controller/log_cookie.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/angular-controller/game_script_ctrl.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/angular-controller/excuted_command_ctrl.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/angular-controller/user_ctrl.js' %}"></script>
