--- a/dj_pro/dj_pro/templates/normal/time.html
+++ b/dj_pro/dj_pro/templates/normal/time.html
@@ -1,3 +1,3 @@
-<div class="row col-sm-12 column">
+<div class="row col-sm-12 column pull-right">
     <h5 ng-controller="TimeController">today : (( clock |date:'yyyy-MM-dd HH:mm:ss (EEE)'))</h5>
 </div>
