--- a/dj_pro/dj_pro/templates/normal/base.html
+++ b/dj_pro/dj_pro/templates/normal/base.html
@@ -33,6 +33,7 @@
         <script type="text/javascript" src="{% static 'js/libs/angular/media-player.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/libs/angular/media-player.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/libs/bootstrap/ui-bootstrap-tpls-0.11.2.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/libs/angular/angular-base64.js' %}"></script>
 
         <script type="text/javascript" src="{% static 'js/angular-controller/main.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/angular-factory/MinSecFilter.js' %}"></script>
@@ -44,6 +45,7 @@
 
         <script type="text/javascript" src="{% static 'js/angular-controller/google_ctrl.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/angular-controller/log_cookie.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/angular-controller/checkuser_cookie.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/angular-controller/game_script_ctrl.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/angular-controller/excuted_command_ctrl.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/angular-controller/user_ctrl.js' %}"></script>
